2004-08-26  Pavel S. Shirshov  <pavelsh@mail.ru>

	* direntry.c: Use g_strlcpy instead strncpy for fix buffer overrun
	* extfs.c: Likewise.
	* mcfs.c: Likewise.
	* smbfs.c: Likewise.
	* utilvfs.c: Likewise.

2004-08-26  Roland Illig  <roland.illig@gmx.de>

	* vfs.c (mc_chdir): Fixed memory leak.

2004-08-22  Leonard den Ottolander  <leonard * den ottolander nl>

	* vfs/extfs/a.in: Quote parameters to calls to system/open that spawn
	a shell.
	* vfs/extfs/apt.in: Likewise.
	* vfs/extfs/debd.in: Likewise.
	* vfs/extfs/dpkg.in: Likewise.
	* vfs/extfs/deba.in: Clean up earlier fixes to quotation of parameters.
	* vfs/extfs/deb.in: Likewise.

2004-08-24  Roland Illig  <roland.illig@gmx.de>

	* extfs.c (extfs_internal_stat): Fixed memory leaks introduced
	by my change from 2004-08-16. (extfs_unlink): likewise.

	* ftpfs.c (ftpfs_send_command): likewise.

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/urar.in: Fix non-POSIX constructs.

	From Koblinger Egmont <egmont uhulinux hu>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Modified workaround for spaces and single quotes 
	in the path name.

	Based on patch from Jakub Jelinek  <jakub@redhat.com>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs/rpm: Don't show cpio contents in main rpm view.
	Also avoids copying files from main view instead of from 
	inside CONTENTS.cpio. The former is painfully slow as the whole 
	file is rpm2cpio'd on each copy.

	From Jakub Jelinek  <jakub@redhat.com>

2004-08-21  Pavel S. Shirshov  <pavelsh@mail.ru>

	* samba/lib/util.c (tmpdir): Use MC_TMPDIR environment variable.
	(automount_lookup): More secure code.

2004-08-19  Roland Illig  <roland.illig@gmx.de>

	* extfs/deb.in (mcdebfs_list): Separated the use of quoted and
	unquoted variables. (mcdebfs_copyout): likewise.
	(mcdebfs_run): likewise.
	
	From Leonard den Ottolander <leonard * den.ottolander.nl>

2004-08-19  Roland Illig  <roland.illig@gmx.de>
