@@ -1,3 +1,10 @@
+2004-08-26  Roland Illig  <roland.illig@gmx.de>
+
+	* undelfs.c (undelfs_lstat): Adjusted declaration.
+	(undelfs_stat): Defined to undelfs_lstat.
+
+	From Andrew V. Samoilov <andrew email zp ua>
+
 2004-08-26  Pavel S. Shirshov  <pavelsh@mail.ru>
 
 	* direntry.c: Use g_strlcpy instead strncpy for fix buffer overrun
